--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>langs</name>
+  <name>message_runtime</name>
   <version>0.4.7</version>
-  <description>Meta package modeling the run-time dependencies for language bindings of messages.</description>
+  <description>Package modeling the run-time dependencies for language bindings of messages.</description>
   <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
   <license>BSD</license>
 
-  <url type="bugtracker">https://github.com/ros/langs/issues</url>
-  <url type="repository">https://github.com/ros/langs</url>
+  <url type="bugtracker">https://github.com/ros/message_runtime/issues</url>
+  <url type="repository">https://github.com/ros/message_runtime</url>
 
   <build_depend>catkin</build_depend>
 
@@ -19,5 +19,5 @@
   <run_depend>roscpp_traits</run_depend>
   <run_depend>rostime</run_depend>
 
-  <run_depend>langs-dev</run_depend> <!-- workaround to provide the generators to dry downstream packages -->
+  <run_depend>message_generator</run_depend> <!-- workaround to provide the generators to dry downstream packages -->
 </package>
