--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <name>message_runtime</name>
   <version>0.4.11</version>
   <description>Package modeling the run-time dependencies for language bindings of messages.</description>
-  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
+  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <license>BSD</license>
 
   <url>http://ros.org/wiki/message_runtime</url>
